
New Icons: (15)
- amazon appstore
- cnn
- ebay
- espn
- flipboard
- linkedin
- microsoft excel, onedrive, oneone, outlook, powerpoint, word
- poweramp
- tunein radio
- wolfram alpha


Version 1.3.0
------------------------------------------------------------------------
- switch to semantic versioning: http://semver.org/
- change blue color
- update targer version and build versions to 25 (need to migrate to adapt for oreo)

New Icons: (8)
- uber eats
- uber driver
- amtrack
- discord
- twitch
- twitch messenger
- amazon drive
- amazons seller

Version 1.3.1
------------------------------------------------------------------------
(change to 1.4 if build version changes)

- DONE update store description to have line stating icon requests can be emailed to mookie.dev
- DONE update github to have less screenshots and a detailed report on who to contribute
- improve support for Aviate, Action, Holo, Smart launcher

New Icons: (18)
- ultimate ears boom
- steam
- xfinity stream tv
- chrome cannary
- google adsense
- inbox by google
- glassdoor
- google find my device
- the score esports
- es file explorer
- last pass
- google home
- atom launcher
- flashfire
- twrp
- speedtest - ookla
- robinhood
- update google drive icon

Version 1.3.2
------------------------------------------------------------------------

New Icons: (24)
- Adobe Acrobat
- Adobe Photoshop
- Adobe Lightroom
- Airbnb
- Capital One
- Expedia
- Gallery (w/ alt colors)
- Google Analytics
- Google Assistant
- Google Classroom
- Google Earth
- Google Express
- Google Newsstand
- Google pdf
- Google Trips
- Google Voice
- Google Wallpapers
- Photomath
- Swipe Snake
- Top Buzz
- Top Buzz viral
- Trip Advisor
- Voice Recorder (w/ alt colors)
- Yelp

Alternate colors for settings, reddit, and downloads
Update google play icon


Version 1.3.2
------------------------------------------------------------------------

Fixes:
Update discord theme for new version

New Icons:
- remind me
- pop the lock